# lecture-pytorch

./: README.md  _quarto.yml  index.qmd  main.py  pyproject.toml  styles.css
labs/: index.qmd
src/: Makefile  README.md  docker-compose.yml  pyproject.toml
src/.github/workflows/: docker-publish.yml
src/labextension/: install.json  package.json  pyproject.toml  tsconfig.json
src/labextension/src/: index.ts
src/labextension/style/: base.css
src/labextension/torchcode_labext/: __init__.py
src/solutions/: 01_relu_solution.ipynb  02_softmax_solution.ipynb  03_linear_solution.ipynb  04_layernorm_solution.ipynb  05_attention_solution.ipynb  06_multihead_attention_solution.ipynb  07_batchnorm_solution.ipynb  08_rmsnorm_solution.ipynb  09_causal_attention_solution.ipynb  10_gqa_solution.ipynb  11_sliding_window_solution.ipynb  12_linear_attention_solution.ipynb  13_gpt2_block_solution.ipynb  14_kv_cache_solution.ipynb  15_mlp_solution.ipynb  16_cross_entropy_solution.ipynb  17_dropout_solution.ipynb  18_embedding_solution.ipynb  19_gelu_solution.ipynb  20_weight_init_solution.ipynb  21_gradient_clipping_solution.ipynb  22_conv2d_solution.ipynb  23_cross_attention_solution.ipynb  24_rope_solution.ipynb  25_flash_attention_solution.ipynb  26_lora_solution.ipynb  27_vit_patch_solution.ipynb  28_moe_solution.ipynb  29_adam_solution.ipynb  30_cosine_lr_solution.ipynb  31_gradient_accumulation_solution.ipynb  32_topk_sampling_solution.ipynb  33_beam_search_solution.ipynb  34_speculative_decoding_solution.ipynb  35_bpe_solution.ipynb  36_int8_quantization_solution.ipynb  37_dpo_loss_solution.ipynb  38_grpo_loss_solution.ipynb  39_ppo_loss_solution.ipynb  40_linear_regression_solution.ipynb
src/templates/: 00_welcome.ipynb  01_relu.ipynb  02_softmax.ipynb  03_linear.ipynb  04_layernorm.ipynb  05_attention.ipynb  06_multihead_attention.ipynb  07_batchnorm.ipynb  08_rmsnorm.ipynb  09_causal_attention.ipynb  10_gqa.ipynb  11_sliding_window.ipynb  12_linear_attention.ipynb  13_gpt2_block.ipynb  14_kv_cache.ipynb  15_mlp.ipynb  16_cross_entropy.ipynb  17_dropout.ipynb  18_embedding.ipynb  19_gelu.ipynb  20_weight_init.ipynb  21_gradient_clipping.ipynb  22_conv2d.ipynb  23_cross_attention.ipynb  24_rope.ipynb  25_flash_attention.ipynb  26_lora.ipynb  27_vit_patch.ipynb  28_moe.ipynb  29_adam.ipynb  30_cosine_lr.ipynb  31_gradient_accumulation.ipynb  32_topk_sampling.ipynb  33_beam_search.ipynb  34_speculative_decoding.ipynb  35_bpe.ipynb  36_int8_quantization.ipynb  37_dpo_loss.ipynb  38_grpo_loss.ipynb  39_ppo_loss.ipynb  (+1 more)
src/torch_judge/: __init__.py  engine.py  progress.py
(+82 files in other folders)
