[project]
name = "lecture-pytorch"
version = "0.1.0"
description = "Interactive Machine Learning and Generative Models labs for Quarto/GitHub Pages."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "torch>=2.4",
]
