[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-judge"
dynamic = ["version"]
description = "Local PyTorch practice judge for the lecture-pytorch course."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "machine-learning-lectures" }
]
keywords = ["pytorch", "jupyter", "notebook", "judge", "education", "practice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.setuptools.packages.find]
include = ["torch_judge*"]
exclude = ["templates*", "solutions*"]

[tool.setuptools.dynamic]
version = {attr = "torch_judge._version.__version__"}
