[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.5"]
build-backend = "hatchling.build"

[project]
name = "torchcode_labext"
version = "0.1.0"
description = "TorchCode JupyterLab Extension — reset notebooks and run judge helpers"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["jupyterlab>=4.0.0,<5"]

[tool.hatch.build.targets.sdist]
exclude = [".github", "node_modules"]

[tool.hatch.build.targets.wheel.shared-data]
"torchcode_labext/labextension" = "share/jupyter/labextensions/torchcode-labext"
"install.json" = "share/jupyter/labextensions/torchcode-labext/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["torchcode_labext/labextension/static/style.js"]
skip-if-exists = ["torchcode_labext/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
